change project name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sillevl/demo-app",
+    "name": "sillevl/htmllib",
     "authors": [
         {
             "name": "Sille Van Landschoot",
