add minimul stability to package.json

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,6 @@
     "require": {},
     "autoload": {
         "psr-4": {"sillevl\\htmllib\\": "lib/"}
-    }
+    },
+    "minimum-stability": "stable"
 }
